tests/ui/error-messages/continue_outside_loop.ko
//@ compile-fail
//@ error-code: E0244
module continue_outside_loop {
    meta { purpose: "Regression: continue outside loop is an error" }

    fn bad() -> Int {
        continue  //~ ERROR E0244
        return 0
    }
}
